prepping overlay for CAS 6